--- a/css/style.css
+++ b/css/style.css
@@ -3,30 +3,27 @@ body{
     font-family: 'Work Sans', sans-serif;
 }
 
-
 .nav-container{
-    background: #e398c5;
-    min-height: 50px;
-    width: 1920px;
-    height: 130px;
+    background:hsla(0, 0%, 100%, 1);
     display: flex;
     align-items: center;
-    padding-left: 20px;
+    padding-left: 10px;
 }
 .nav-container span{
-    color: #ff42ff;;
-    
+    color: #ff42ff;
 }
+
 .logo-container{
+    gap: 20px;
     display: flex;
     margin-left: 200px;
     width: 50%;
 }
 .logo-container img{
-    width: 86.041px;
-height: 40px;
-margin-top: 50px;
-margin-left: 50px;
+    width: 80px;
+    height: 40px;
+    margin-top: 50px;
+    margin-left: 50px;
 }
 .logo-container p{
     display: flex;
@@ -34,24 +31,41 @@ margin-left: 50px;
     font-size: 45px;
 }
 .nav-items-container{
-    width: 40%;
+    color: #3C354F;
+font-size: 18px;
+font-weight: 500;
+    width: 26%;
     display: flex;
    justify-content: space-between;
+   align-items: center;
 }
+.nav-items-container a{
+    text-decoration: none;
+}
+
+.login-btn{
+    width: 250px;
+    height: 50px;
+    border-radius: 8px;
+    background: #0b02231a;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 10px 20px;
+}
+
 .btn-primary{
     border: none;
     color: #FFF;;
     border-radius: 48px;
-background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
-display: inline-flex;
-padding: 21px 40px;
-align-items: flex-start;
-gap: 10px;
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+    padding: 21px 40px;
+    margin-left: 200px;
 }
 
 .banner-container{
-   
+   justify-content: space-between;
     margin: 50px auto 0;
+    align-items: center;
     max-width: 1400px;
     min-height: 50px;
     display: flex;
@@ -62,20 +76,22 @@ gap: 10px;
    color: transparent;
    -webkit-background-clip: text;
    font-size: 50px;
+   margin-left: 200px;
 }
 .play{
+    margin-left: 200px;
     font-size: 45px;
     font-weight: 600;
 }
 .banner-text p{
-    
+    margin-left: 200px;
 }
 .banner-img{
-   width: 100%;
+   width: 500px;
 }
 .new-container{
    width: 80%;
-    margin-left: 200px;
+    margin-left: 140px;
     margin-bottom: -400px;
     
     text-align: right;
@@ -124,19 +140,135 @@ background-clip: text;
 .online-games-container{
     display: flex;
     gap: 24px;
+    
  
 }
-.online-games-container-one{
-    margin-left: 200px;
-}
+
 .instant{
-    min-height: 50px;
-    width: 1920px;
-    height: 130px;
+   margin-left: 400px;
+   display: flex;
+   padding-top: 200px;
+   margin-bottom: -500px;
    
-    align-items: center;
-    padding-left: 20px;
 }
-.instant-img{
+.text{
+    align-items: center;
+   
+}
+.instant .img-one {
+    width: 634.833px;
+    height: 650px;
     display: flex;
+    position: relative;
+    left: 500px;
+    bottom: 350px;
+}
+.instant .img-two{
+    width: 318.5px;
+    height: 365.083px;
+    position: relative;
+    bottom: 600px;
+    left: 350px;
+}
+.Careers-container{
+    
+    background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+    width: 1880px;
+    height: 600px;
+
+}
+.Careers-container h2{
+    margin-left: 200px;
+    position: relative;
+    top: 100px;
+    color: #FFF;
+    font-size: 48px;;
+    font-weight: 700;
+    line-height: 60px;
+}
+.Careers-container p{
+    margin-left: 200px;
+    position: relative;
+    top: 100px;
+    color: #FFF;
+}
+
+.space{
+    
+    
+}
+.child-play{
+    width: 800px;
+    display: flex;
+    position: relative;
+    left: 900px;
+    bottom: 450px;
+}
+.Careers-container .lisbon{
+       margin-left: 500px;
+       position: relative;
+       top: -25px;
+       color: #FFF;
+}
+.Careers-container button{
+    margin-left: 200px;
+    border-radius: 45px;
+    border: none;
+    padding: 21px 40px;
+    align-items: flex-start;
+    gap: 10px;
+}
+.logo-contain{
+    display: flex;
+    align-items: center;
+}
+
+
+
+<!---last section container------>
+
+
+
+.last-section-container{
+    text-align: center;
+    border: 1px solid antiquewhite;
+    min-height: 400px;
+    background: #0B0223;
+}
+.last-section-contain{
+    border: 1px solid seashell;
+    display: flex;
+    gap: 20px;
+
+}
+.last-section-contain img{
+    border: 1px solid sandybrown;
+    
+    width: 100px;
+    height: 50px;
+    margin-left: 750px;
+    margin-top: 50px;
+    object-fit: cover;
+
+    }
+.last-section-contain p{
+    color: #FFF;
+    font-size: 45px;
+    font-weight: 700;
+}
+.last-section{
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid seagreen;
+    margin-left: 400px;
+    color: #FFF;
+    
+    font-size: 18px;
+    font-weight: 600;
+    
+    
+}
+.last-section a{
+    text-decoration: none;
 }
