--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,20 +1,26 @@
 @media screen and (max-width:576px) {
-   /* .logo-container{
+    .img{
+        width: 100%;
+        height: 100%;
+    }
+    .logo-container{
         flex-direction: column;
         
     }
     .logo-container img{
         margin-right: 20px;
     }
-    .nav-container{
+    .nav-items-container{
+        flex-direction: column;
+     }
+     .banner-container{
+        flex-direction: column;
+     }
+     .banner-img{
         flex-direction: column;
         flex-wrap: wrap;
-    }
+        width: 200px;
+     }
+  
     
-}
-.online-games-container{
-    flex-wrap: wrap;
-    margin-right: 50px;
-    width: 50%;
-    height: 50%;
 }
